[package]
name = "lending_protocol"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_primitives = { version = "4.3.0" }

[lib]
path = "lib.rs"
crate-type = [
    "rlib",
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]